# iced_hello_app

./: .cargo-generate.toml  .genignore  Cargo.toml  README.md  Trunk.toml  cargo-generate.toml  index.html
icons/: README.md
src/: main.rs
