# 🧊 {{project-name}}
[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"

# cargo-bundle
[package.metadata.bundle]
name = "{{project-display-name}}"
identifier = "{{bundle-identifier}}"
icon = ["icons/icon.icns"]
version = "0.1.0"
copyright = "COPYRIGHT (c) 2025 {{project-author}}"
category = "public.app-category.utilities"
short_description = "{{project-description}}"


# dependencies
[dependencies]
iced = "0.13.1"



# ==================================
# copyright 2025 by {{project-author}}